Ass-1/getting_started/test_files/valid/test6.cpm
class Fibonacci {
  fib(n : int): int {
    if (n < 3) {
      return 1
    } else {
      return fib(n - 1) + fib(n - 2)
    }
  }
}

main(): int {
  fibonacci : Fibonacci := Fibonacci()
  volatile n : int := 1
  for (n := 1, n <= 16, n := n + 1) {
    print(fibonacci.fib(n))
    }
  return 0
}