Ass-1/getting_started/test_files/syntax_errors/InvalidClassSignature.cpm
class MyClass = myClass { //@error - syntax (invalid class signature)
  Init(): boolean {
    Age := v_Age
    return true
  }
}

main() : int {
  print(MyClass().Init())
  return 0
}